--- a/lend-a-handle/requirements.txt
+++ b/lend-a-handle/requirements.txt
@@ -1,6 +1,9 @@
 alembic==1.8.0
+autopep8==1.6.0
 click==8.1.3
 Flask==2.1.2
+Flask-Cors==3.0.10
+Flask-HTTPAuth==4.7.0
 Flask-Login==0.6.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
@@ -11,8 +14,11 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.0
 MarkupSafe==2.1.1
+pycodestyle==2.8.0
 python-dotenv==0.20.0
+six==1.16.0
 SQLAlchemy==1.4.39
+toml==0.10.2
 Werkzeug==2.1.2
 WTForms==3.0.1
 zipp==3.8.0
